# EODP

./: .gitignore  README.md  log_history.txt
eodp_gm-master/: .gitignore  CMakeLists.txt  README.md
eodp_gm-master/auxiliary/: dem_config.xml  osf_sentinel2a.xml  real_grid_ncmap.xml  s3_osf.xml
eodp_gm-master/cmake/: FindBOOST.cmake  FindCONFIG.cmake  FindEECFI.cmake  FindNCMAP.cmake  FindNETCDF.cmake  FindXML2.cmake
eodp_gm-master/common/catch/src/: CMakeLists.txt
eodp_gm-master/common/src/: CMakeLists.txt  Common.hpp  FIPSException.cpp  FIPSException.hpp  FIPSModule.cpp  FIPSModule.hpp  StringManager.cpp  StringManager.hpp
eodp_gm-master/common/test/: CMakeLists.txt
eodp_gm-master/conf/: gm_local_conf.xml
eodp_gm-master/cots/config-1.0.0/include/: configuration.hh
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/: TERMS_AND_CONDITIONS.TXT  example.sh  validation.sh
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_data_handling/example/c/: explorer_data_handling_c.c  make.LINUX64  outref.example_data_handling_LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_data_handling/example/data/: ATT_DEF_FILE.XML  CRYOSAT_ATT_FILE.XML  CRYOSAT_DORIS_NAV_2000  CRYOSAT_STAR_TRACKER_CONF_FILE.XML  CRYOSAT_STAR_TRACKER_DATA.DBL  CRYOSAT_XML_OSF  DEM_CONFIG_FILE.XML  DEM_CONFIG_FILE_val.XML  EARTH_EXPLORER_FPO  FOV_test_file.xml  NOAA_TLE_FILE  PRECISE_PROPAG_CONF.xml  STATION_FILE.XML  SWATH_DEF_FILE  SWATH_TEMPLATE_FILE  ZONE_FILE.XML  att_def_file_angles.xml  emr17590.sp3
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_data_handling/validation/: explorer_data_handling_valid.c  make.LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_file_handling/example/c/: explorer_file_handling_c.c  make.LINUX64  outref.example_file_handling_LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_file_handling/example/data/: mpl_orb_sc.second.xml  mpl_orb_sc.xml
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_file_handling/validation/: explorer_file_handling_valid.c  make.LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_lib/example/c/: explorer_lib_c.c  explorer_lib_run_c.c  make.LINUX64  makerun.LINUX64  outref.example_lib_LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_lib/validation/: explorer_lib_valid.c  make.LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_orbit/example/c/: explorer_orbit_c.c  explorer_orbit_run_c.c  make.LINUX64  makerun.LINUX64  outref.example_orbit_LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_orbit/example/data/: CONTROL_FILE.xml  CRYOSAT_DORIS_NAV_2000  CRYOSAT_XML_OSF  CRYOSAT_XML_OSF_ANR_527  EARTH_EXPLORER_FPO  EARTH_EXPLORER_FPO_18_OSV  EARTH_EXPLORER_FPO_18_OSV_PART1  EARTH_EXPLORER_FPO_18_OSV_PART2  EARTH_EXPLORER_FPO_18_OSV_PART3  EARTH_EXPLORER_FPO_2000  EARTH_EXPLORER_FPO_ANR_527  EARTH_EXPLORER_FRO  EARTH_EXPLORER_FRO_TO_DORIS_2000
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_orbit/validation/: explorer_orbit_valid.c  make.LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_pointing/example/c/: explorer_pointing_c.c  explorer_pointing_run_c.c  (+3 more)
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_pointing/validation/: explorer_pointing_valid.c  make.LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/explorer_visibility/validation/: explorer_visibility_valid.c  make.LINUX64
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/files/models/: ap_esa_ecss_jan2000_max.sga  ap_esa_ecss_jan2000_mean.sga  ap_msfc_nov2002_max.sga  ap_msfc_nov2002_mean.sga  f107_esa_ecss_jan2000_max.sga  f107_esa_ecss_jan2000_mean.sga  f107_msfc_nov2002_max.sga  f107_msfc_nov2002_mean.sga
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/files/schemas/: BasicTypes_0101.XSD  BasicTypes_0201.XSD  BasicTypes_0300.XSD  EO_OPER_AUX_COMMON.HeaderTypes_0203.xsd  EO_OPER_AUX_COMMON.HeaderTypes_0300.XSD  EO_OPER_AUX_ORBDOP.DataBlockTypes_0102.XSD  EO_OPER_AUX_ORBDOP.DataBlockTypes_0300.XSD  EO_OPER_AUX_ORBDOP.HeaderTypes_0103.XSD  EO_OPER_AUX_ORBDOP.HeaderTypes_0300.XSD  EO_OPER_AUX_ORBDOP_0105.XSD  EO_OPER_AUX_ORBDOP_0300.XSD  EO_OPER_AUX_ORBDOR.DataBlockTypes_0102.XSD  EO_OPER_AUX_ORBDOR.DataBlockTypes_0300.XSD  EO_OPER_AUX_ORBDOR.HeaderTypes_0103.XSD  EO_OPER_AUX_ORBDOR.HeaderTypes_0300.XSD  EO_OPER_AUX_ORBDOR_0105.XSD  EO_OPER_AUX_ORBDOR_0300.XSD  EO_OPER_AUX_ORBRES.DataBlockTypes_0102.XSD  EO_OPER_AUX_ORBRES.DataBlockTypes_0202.XSD  EO_OPER_AUX_ORBRES.DataBlockTypes_0300.XSD  EO_OPER_AUX_ORBRES.HeaderTypes_0103.XSD  EO_OPER_AUX_ORBRES.HeaderTypes_0202.XSD  EO_OPER_AUX_ORBRES.HeaderTypes_0300.XSD  EO_OPER_AUX_ORBRES_0105.XSD  EO_OPER_AUX_ORBRES_0203.XSD  EO_OPER_AUX_ORBRES_0300.XSD  EO_OPER_DOR_NAV_0_.DataBlockTypes_0100.XSD  EO_OPER_DOR_NAV_0_.HeaderTypes_0103.XSD  EO_OPER_DOR_NAV_0_.HeaderTypes_0300.XSD  EO_OPER_INT_ATTDEF.DataBlockTypes_0104.XSD  EO_OPER_INT_ATTDEF.DataBlockTypes_0205.XSD  EO_OPER_INT_ATTDEF.DataBlockTypes_0302.XSD  EO_OPER_INT_ATTDEF.HeaderTypes_0100.XSD  EO_OPER_INT_ATTDEF.HeaderTypes_0201.XSD  EO_OPER_INT_ATTDEF.HeaderTypes_0300.XSD  EO_OPER_INT_ATTDEF_0104.XSD  EO_OPER_INT_ATTDEF_0205.XSD  EO_OPER_INT_ATTDEF_0302.XSD  EO_OPER_INT_ATTREF.DataBlockTypes_0103.XSD  EO_OPER_INT_ATTREF.DataBlockTypes_0202.XSD  (+122 more)
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/files/xslt/: OSF.xslt  OSV_list.xslt  att_angles.xslt  att_quaternions.xslt
eodp_gm-master/cots/eocfi-clib-linux64-4.17.0/include/: explorer_data_handling.h  explorer_file_handling.h  explorer_lib.h  explorer_orbit.h  explorer_pointing.h  explorer_visibility.h
eodp_gm-master/cots/ncmap-1.0.0/include/: ncmap.hh  ncmap_parser.hh  ncmap_structs.hh
eodp_gm-master/cots/netcdf-cpplib-linux64-4.3.0/include/: netcdf_meta.h
eodp_gm-master/gm/src/: CMakeLists.txt  GMException.cpp  GMException.hpp  GMRealGridICD.cpp  GMRealGridICD.hpp  GeometryModule.cpp  GeometryModule.hpp  GeometryModuleConfiguration.cpp  GeometryModuleConfiguration.hpp  main.cpp
eodp_gm-master/gm/test/: CMakeLists.txt
eodp_gm-master/gm/test/ut02/: CMakeLists.txt  testRealOrbitPropagation.cpp
(+199 files in other folders)
